<resources>
    <string name="app_name">BlackjackTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bj_image1">splash screen image</string>
    <string name="splash_text">Blackjack Tracker Initializing</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">REGISTER</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="logout">LOGOUT</string>
    <string name="bj_news">Blackjack News &lt;a href=https://assets.bj21.com/newsletters/pdf_files/000/000/028/original/CBJN1805.pdf?1525361174>Free Sample&lt;/a></string>
</resources>
